[Changes 1.2c01]

* Use system setenv() in preference to compat bsd_setenv(). (caf)

* Allow selection of alternate hashing methods with $crypt(). (caf)

* Improve the initial seeding of the randm() fallback RNG. (caf)

* Strengthen the cookie generation algorithm for /detach. (caf)

* RANDOM_SOURCE now only affects the rand() scripting function. (caf)

* Make RANDOM_LOCAL_PORTS actually random. (caf)

* Show same message on local terminal as used in emergency exit QUIT. (caf)

* Remove unused XLINK CTCP reply handler. (caf)

* Ensure add_socketread() doesn't leak file descriptors. (caf)

* Fix listing bans on local channels (/BANS &channel). (flashback)

* Fix unbanning by number (/UNBAN #channel #number). (caf)

* Improve the list_channels() function. (caf)

* Use socklen_t instead of plain int where available. (flashback)

* Use <termios.h> in preference to <sys/termios.h> where it's available. (caf)

* Skip malformed abots.sav entries in read_abot(), avoiding null
  dereferences found by Coverity. (flashback)

* Ensure proper handling of % when /FSET DCC is used. (caf)

* Improve robustness of CDCC save file loading. (caf)

* Fix open file leak in /LASTLOG found by Coverity. (caf)

* Fix file descriptor leak on SOCKS4 connection failure found by
  Coverity. (caf)

* Fix out-of-bounds error in cryptit() found by Coverity. (flashback)

* Cleanup save_formats(). (caf)

* Fix off-by-one error in add_socketread() and set_socketwrite() found
  by Coverity. (caf)

* Fix longstanding bug with ordering of rfc1459[] array. (caf)

* Fix crash after /SETAR -, reported by riderplus. (caf)

* Remove special handling of 484 numeric, which is no longer needed and
  was buggy (making BitchX think that usermode +G was set). (caf)

* Add /OBITS command, shows obituaries for some BitchX friends. (caf)

* Fix abuses of the RESIZE macro.  Reported by nenolod. (caf)

* Clears up a crash and some build warnings in the acro plugin. (caf)
